@@ -31,9 +31,6 @@ void cleanup_taskbar();
 Task *task_get_task (Window win);
 void task_refresh_tasklist ();
 
-// return 1 if task_width changed
-int resize_tasks (Taskbar *tskbar);
-
 void resize_taskbar(void *obj);
 
 
